# Virtual-Geometry

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json
src/: Application.cpp  Application.hpp  Error.hpp  Logger.cpp  Logger.hpp  VulkanContext.cpp  VulkanContext.hpp  Window.cpp  Window.hpp  main.cpp
